--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -7,3 +7,8 @@ one: {}
 two: {}
 #    name: MyString
 #    email: MyString3
+
+michael:
+  name: Michael Example
+  email: michael@example.com
+  password_digest: <%= User.digest 'password' %> # needed because column in db is password_digest (encrypted)
