--- a/test/fixtures/microposts.yml
+++ b/test/fixtures/microposts.yml
@@ -1,9 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  content: MyText
-  user: one
+apple:
+  content: "I just ate an apple!"
+  created_at: <%= 2.hours.ago %>
 
-two:
-  content: MyText
-  user: two
+banana:
+  content: "I just ate a banana!"
+  created_at: <%= 3.weeks.ago %>
+
+orange:
+  content: "I just ate an orange!"
+  created_at: <%= Time.zone.now %>
