--- a/test/fixtures/microposts.yml
+++ b/test/fixtures/microposts.yml
@@ -3,11 +3,21 @@
 apple:
   content: "I just ate an apple!"
   created_at: <%= 2.hours.ago %>
+  user: michael
 
 banana:
   content: "I just ate a banana!"
   created_at: <%= 3.weeks.ago %>
+  user: michael
 
 orange:
   content: "I just ate an orange!"
   created_at: <%= Time.zone.now %>
+  user: michael
+
+<% 50.times do |n| %>
+micropost_<%= n %>:
+  content: <%= Faker::Lorem.sentence(6) %>
+  created_at: <%= 42.days.ago %>
+  user: michael
+<% end %>
