--- a/test/fixtures/microposts.yml
+++ b/test/fixtures/microposts.yml
@@ -21,3 +21,23 @@ micropost_<%= n %>:
   created_at: <%= 42.days.ago %>
   user: michael
 <% end %>
+
+ants:
+  content: "Ants are very busy"
+  created_at: <%= 32.days.ago %>
+  user: archer
+
+zone:
+  content: "Danger zone!"
+  created_at: <%= 1.week.ago %>
+  user: archer
+
+tone:
+  content: "I'm sorry. Your words made sense, but your sarcastic tone did not."
+  created_at: <%= 1.week.ago %>
+  user: lana
+
+# van:
+#   content: Dude, this van's, like, rolling probable cause."
+#   created_at: <%= 4.hours.ago %>
+#   user: lana
